<resources>
    <string name="app_name">HackerEmbassy</string>
    <string name="nav_header_title">Hacker Embassy</string>

    <!-- MQTT PARAMS -->
    <string name="mqtt_id">HackerEmbassyAndroid</string>

    <!-- NAVIGATION MENU -->
    <string name="navigation_doorlock">Doorlock</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_info">Info</string>

    <!-- LOGIN ACTIVITY -->
    <string name="mqtt_username_field_hint">Username</string>
    <string name="mqtt_password_field_hint">Password</string>
    <string name="mqtt_host_field_hint">Host</string>
    <string name="login_button_text">Test connection &amp; Save</string>
    <string name="uk_flag_desc">App logo</string>
    <string name="login_alert_error_title">Error</string>

    <!-- DOORLOCK FRAGMENT -->
    <string name="open_door_button_text">Open Door</string>
    <string name="retry_connection_button_text">Reconnect</string>

    <string name="connection_status_text_connected">Connected!</string>
    <string name="connection_status_text_not_connected">Not connected!</string>
    <string name="connection_status_text_connected_no_response">Connected, no response form lock!</string>
    <string name="doorlock_connection_status_connecting">Connecting…</string>
    <string name="alert_no_lock_response">MQTT connected, but no response from lock!</string>
</resources>